--- a/Fiddle Chat App/package.json
+++ b/Fiddle Chat App/package.json
@@ -25,13 +25,15 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.0",
     "semver": "^7.5.3",
-    "use-local-storage": "^3.0.0"
+    "use-local-storage": "^3.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react": "^4.0.1",
     "sass": "^1.63.6",
     "typescript": "^5.1.3",
