--- a/Fiddle Chat App/src-tauri/Cargo.toml
+++ b/Fiddle Chat App/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-build = { version = "1.4", features = [] }
 tauri = { version = "1.4", features = [ "window-minimize", "window-unmaximize", "window-close", "window-maximize", "window-unminimize", "window-start-dragging", "window-hide", "window-show", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "main" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
