--- a/Fiddle Chat App/src-tauri/Cargo.toml
+++ b/Fiddle Chat App/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fiddle-chat-app"
-version = "0.3.1"
+version = "0.3.2"
 description = "A real time chat application that allows users to chat with each other through private messages and rooms"
 authors = ["waveyboym"]
 license = ""
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "window-unmaximize", "window-show", "window-hide", "window-unminimize", "window-close", "window-minimize", "window-maximize", "http-all", "os-all", "shell-open"] }
+tauri = { version = "1.4", features = [ "window-close", "dialog-all", "http-all", "os-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "main" }
